# GreatLibrarian

./: .gitignore  1.py  =1.10  Makefile  README.md  apitry.py  pdf.py  pep8.ruffconfig  pyproject.toml  readme.md  register_usr.py  requirements.txt  run.py
Agents/: __init__.py
Agents/BookStore/: getData.py
Analyser/: analyse.py  getInfo.py  log_safe.py
Configs/: __init__.py  example1.py
Core/: LLMs.py  __init__.py  evalMethods.py  finalscore.py  interactor.py
EvalMethods/: __init__.py  blacklist.py  gpt4Eval.py  keyword.py  toolUsage.py
FinalScore/: __init__.py  finalscore1.py
Interactor/: __init__.py  autoInteractor.py
LLMs/: LLMs.ini  __init__.py  dbInteractor.py
Runner/: autoRunner.py
Test/: commom_knowledge copy 5.json  example1 copy 10.json  example1 copy 2.json  example1 copy 3.json  example1 copy 4.json  example1 copy 5.json  example1 copy 6.json  example1 copy 7.json  example1 copy 8.json  example1 copy 9.json  example1.json  example12.json  example2.json  example3.json  example4.json  example5.json
TestCase/: __init__.py  caseImpl.py  example.json  example1.json  example10.json  example11.json  example12.json  example13.json  example14.json  example15.json  example16.json  example17.json  example18.json  example19.json  example2.json  example20.json  example3.json  example4.json  example5.json  example6.json  example7.json  example8.json  example9.json  tcTransformer.py  testProject.py
Testcase/: 2.json  3.json  4.json  5.json  commom_knowledge.json  example13.json  example3.json  external_security.json  internal_security.json  language_understanding.json  multi_language.json
Utils/: __init__.py  clean_log.py  io.py  logger.py  mistaken_case.py  register.py  typetrans.py
gl/: register.py  run.py
greatlibrarian/: README.md  __init__.py  register.py  register_async.py  run.py  test2.py  testregist.py
(+174 files in other folders)
