[tool.poetry]
name = "greatlibrarian"
version = "0.0.4"
description = ""
authors = ["dmj <ggxxding@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
zhipuai = "^1.0.7"
numpy = "^1.26.2"
dashscope = "^1.13.3"
qianfan = "^0.1.3"
pymysql = "^1.1.0"
matplotlib = "^3.8.1"
reportlab = "^4.0.7"
tqdm = "^4.66.1"

[tool.poetry.scripts]
gltest = "greatlibrarian.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
