[tool.poetry]
name = "gl"
version = "0.0.12"
description = ""
authors = ["dmj <ggxxding@163.com>"]

[tool.poetry.dependencies]
python = "^3.10"
zhipuai = "^1.0.7"
numpy = "^1.26.2"
dashscope = "^1.13.3"
qianfan = "^0.1.3"
pymysql = "^1.1.0"
matplotlib = "^3.8.1"
reportlab = "^4.0.7"
tqdm = "^4.66.1"
click = "^8.1.7"
markdown = "^3.6"
pandoc = "^2.3"
pypandoc = "^1.13"
pymdown-extensions = "^10.8.1"

[tool.poetry.scripts]
gltest = "gl.run:test"
glupdate = "gl.run:update"
gltest_async = "gl.run:test_async"
glupdate_async = "gl.run:update_async"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
